--- a/style.css
+++ b/style.css
@@ -7,20 +7,15 @@ html,body {
     padding-top: 5em;
     text-align: center;
     background-color: black;
-    /* background-image: url('../img/dungeonhell.png'); */
-    background-size: cover;
-    background-repeat: space;
+    
   }
   
   h1, h2 {
     font-family: 'Press Start 2P', monospace;
-    /* font-family: monospace; */
     color: goldenrod;
   }
   
   canvas {
-    /* background-image: url('../img/stone.png'); */
-    /* background-repeat: repeat; */
     width: 100%;
     height: 100;
     background-image:  url("/Users/stevenmichaud/generalassembly/unit_one/Project_1/assets/demonbackground.png");
@@ -60,8 +55,7 @@ html,body {
   
   #top-right {
     grid-area: top-right;
-    /* background-color: #222; */
-    /* background-image: url('../img/funky-lines.png'); */
+    
   }
   
   main {
@@ -73,14 +67,17 @@ html,body {
     grid-area: btm-left;
     background: linear-gradient(black, darkred);
     font: yellow;
-    /* background-color: #222; */
+    font-size: 10;
+    
+    
   }
   
   #btm-right {
     grid-area: btm-right;
     background: linear-gradient(black, darkred);
     font: yellow;
-    /* background-color: #222; */
+    font-size: 10;
+    
   }
 
  .gameover {
