--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html,body {
   h1, h2 {
     font-family: 'Press Start 2P', monospace;
     color: goldenrod;
+    
   }
   
   canvas {
@@ -45,6 +46,7 @@ html,body {
     align-items: center;
     background-color: black;
     height: 100px;
+    
   }
   
   #top-left {
@@ -67,7 +69,7 @@ html,body {
     grid-area: btm-left;
     background: linear-gradient(black, darkred);
     font: yellow;
-    font-size: 10;
+    font-size: 
     
     
   }
@@ -75,8 +77,7 @@ html,body {
   #btm-right {
     grid-area: btm-right;
     background: linear-gradient(black, darkred);
-    font: yellow;
-    font-size: 10;
+    font-size: 
     
   }
 
