--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html,body {
   
   grid-template-areas: "top-left top-left top-right"
                         "game game game"
-                        "btm-left btm-right btm-right";
+                        "btm-right btm-right btm-right";
   }
   
   #top-left, #top-right, #btm-left, #btm-right {
